# adup

./: .gitignore  Cargo.toml
src/: main.rs
src/addons/: version.rs
src/commands/: delete.rs  entry.rs  mod.rs
src/commands/config/: command.rs
src/commands/install/: command.rs
src/commands/login/: command.rs
src/utils/: auth.rs  config.rs  emoji.rs  fs.rs  message.rs  mod.rs
src/utils/api/: client.rs  responses.rs
