[package]
name = "adup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
reqwest = { version = "0.11.10", features = ["json", "stream"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0"
futures = "0.3"
keytar = "0.1.6"
clap = { version = "3.1.18", features = ["derive"] }
zip = "0.6.2"
indicatif = "0.16.2"
futures-util = "0.3.21"
console = "0.15.0"
anyhow = "1.0.57"
chrono = "0.4.19"
confy = "0.4.0"
